# pqr

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pqr.benchmarks.interfaces.rst  pqr.benchmarks.rst  pqr.factor_model.rst  pqr.factors.dummy_factors.rst  pqr.factors.interfaces.rst  pqr.factors.multi_factors.picking_multi_factors.rst  pqr.factors.multi_factors.rst  pqr.factors.rst  pqr.factors.single_factors.rst  pqr.intervals.rst  pqr.portfolios.interfaces.rst  pqr.portfolios.rst  pqr.preprocessing.rst  pqr.rst
examples/: china_momentum_value.ipynb  example.ipynb  example_size_in_russia.ipynb  example_value_in_italy.ipynb  multifactors.ipynb  quickstart.ipynb  research.ipynb  simple_FAANG_momentum.ipynb  size+_value(some)_factors_on_russian_market.ipynb  size_in_russia.ipynb  test.xlsx  usa_momentum.ipynb  value_in_italy.ipynb  volatility_scaling.ipynb
pqr/: __init__.py  attribution.py  benchmark.py  benchmarks.py  factor_model.py  factor_models.py  factors.py  main.py  metrics.py  plotting.py  portfolios.py  preprocessing.py  tear_sheets.py  tests.py  thresholds.py  utils.py  visualization.py
pqr/analytics/: __init__.py  attribution.py  dashboards.py  metrics.py  plotting.py  regressions.py  tear_sheets.py  tests.py  utils.py
pqr/base/: benchmark.py  factor.py  factor_model.py  limits.py  multi_factor.py  portfolio.py
pqr/benchmarks/: __init__.py  basebenchmark.py  (+2 more)
tests/: conftest.py  test_benchmarks.py  test_factors.py  test_portfolios.py
(+178 files in other folders)
