[tool.poetry]
name = "pqr"
version = "0.3.5"
description = ""
authors = ["Andrey Babkin <andrey.babkin.ru71@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
pandas = "^1.3.5"
statsmodels = "^0.13.1"
matplotlib = "^3.5.1"
ipython = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
